Finish layout, routes, and signup pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,10 @@
-<h1>Help page</h1>
-<p>
-	This is help page of sample app
-</p>
+<% provide(:title, 'Help') %>
+<div class="center hero-unit">
+	<h2>
+    	Help page
+  	</h2>
+
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+
